--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,8 +1,6 @@
 
 cmake_minimum_required(VERSION 3.4.1)
 
-add_definitions(-DCODECS -DFILTERS)
-
 INCLUDE_DIRECTORIES(
     src/melt
     src/framework
@@ -13,8 +11,14 @@ INCLUDE_DIRECTORIES(
 )
 
 find_package(PkgConfig REQUIRED)
-pkg_search_module(MLT REQUIRED mlt-framework)
-pkg_search_module(SDL2 REQUIRED SDL2)
+pkg_search_module(SDL2 REQUIRED sdl2)
+pkg_search_module(AVCODEC REQUIRED libavcodec)
+pkg_search_module(AVFORMAT REQUIRED libavformat)
+pkg_search_module(AVUTIL REQUIRED libavutil)
+pkg_search_module(AVRESAMPLE REQUIRED libavresample)
+pkg_search_module(AVDEVICE REQUIRED libavdevice)
+pkg_search_module(AVFILTER REQUIRED libavfilter)
+pkg_search_module(SWSCALE REQUIRED libswscale)
 
 set(FRAMEWORK_SRC_FILES
     src/framework/mlt_frame.c
@@ -69,60 +73,60 @@ set(MLTCPP_SRC_FILES
     src/mlt++/MltTokeniser.cpp
     src/mlt++/MltTractor.cpp
     src/mlt++/MltTransition.cpp
-    src/mlt++/mlt_wrap.cxx
 )
 
 set(CORE_SRC_FILES
-    src/core/factory.c
-    src/core/producer_colour.c
-    src/core/producer_consumer.c
-    src/core/producer_hold.c
-    src/core/producer_loader.c
-    src/core/producer_melt.c
-    src/core/producer_noise.c
-    src/core/producer_timewarp.c
-    src/core/producer_tone.c
-    src/core/filter_audiochannels.c
-    src/core/filter_audiomap.c
-    src/core/filter_audioconvert.c
-    src/core/filter_audiowave.c
-    src/core/filter_brightness.c
-    src/core/filter_channelcopy.c
-    src/core/filter_crop.c
-    src/core/filter_data_feed.c
-    src/core/filter_data_show.c
-    src/core/filter_fieldorder.c
-    src/core/filter_gamma.c
-    src/core/filter_greyscale.c
-    src/core/filter_imageconvert.c
-    src/core/filter_luma.c
-    src/core/filter_mirror.c
-    src/core/filter_mono.c
-    src/core/filter_obscure.c
-    src/core/filter_panner.c
-    src/core/filter_region.c
-    src/core/filter_rescale.c
-    src/core/filter_resize.c
-    src/core/filter_transition.c
-    src/core/filter_watermark.c
-    src/core/transition_composite.c
-    src/core/transition_luma.c
-    src/core/transition_mix.c
-    src/core/transition_region.c
-    src/core/transition_matte.c
-    src/core/consumer_multi.c
-    src/core/consumer_null.c
+    ./src/modules/core//producer_tone.c
+    ./src/modules/core//filter_brightness.c
+    ./src/modules/core//filter_panner.c
+    ./src/modules/core//filter_data_show.c
+    ./src/modules/core//filter_greyscale.c
+    ./src/modules/core//transition_composite.c
+    ./src/modules/core//filter_mirror.c
+    ./src/modules/core//filter_audioconvert.c
+    ./src/modules/core//filter_mono.c
+    ./src/modules/core//filter_luma.c
+    ./src/modules/core//composite_line_yuv_sse2_simple.c
+    ./src/modules/core//filter_audiochannels.c
+    ./src/modules/core//transition_matte.c
+    ./src/modules/core//consumer_null.c
+    ./src/modules/core//filter_gamma.c
+    ./src/modules/core//filter_crop.c
+    ./src/modules/core//filter_data_feed.c
+    ./src/modules/core//producer_loader.c
+    ./src/modules/core//filter_watermark.c
+    ./src/modules/core//factory.c
+    ./src/modules/core//producer_noise.c
+    ./src/modules/core//filter_fieldorder.c
+    ./src/modules/core//transition_luma.c
+    ./src/modules/core//filter_channelcopy.c
+    ./src/modules/core//producer_melt.c
+    ./src/modules/core//transition_region.c
+    ./src/modules/core//producer_timewarp.c
+    ./src/modules/core//transition_mix.c
+    ./src/modules/core//filter_imageconvert.c
+    ./src/modules/core//filter_audiowave.c
+    ./src/modules/core//producer_consumer.c
+    ./src/modules/core//filter_obscure.c
+    ./src/modules/core//producer_colour.c
+    ./src/modules/core//consumer_multi.c
+    ./src/modules/core//filter_resize.c
+    ./src/modules/core//filter_rescale.c
+    ./src/modules/core//producer_hold.c
+    ./src/modules/core//filter_audiomap.c
+    ./src/modules/core//filter_transition.c
+    ./src/modules/core//filter_region.c
 )
 
 set(AVFORMAT_SRC_FILES
-    src/producer_avformat/consumer_avformat.c
-    src/producer_avformat/filter_avfilter.c
-    src/producer_avformat/producer_avformat.c
-    src/producer_avformat/filter_avcolour_space.c
-    src/producer_avformat/factory.c
-    src/producer_avformat/filter_avdeinterlace.c
-    #src/producer_avformat/vdpau.c
-    src/producer_avformat/filter_swscale.c
+    src/modules/avformat//consumer_avformat.c
+    src/modules/avformat//filter_avfilter.c
+    src/modules/avformat//producer_avformat.c
+    src/modules/avformat//filter_avcolour_space.c
+    src/modules/avformat//factory.c
+    src/modules/avformat//filter_avdeinterlace.c
+#src/modules/avformat//vdpau.c
+    src/modules/avformat//filter_swscale.c
 )
 
 set(MELT_SRC_FILES
@@ -130,21 +134,84 @@ set(MELT_SRC_FILES
     src/melt/io.c
 )
 
-add_executable(melt ${MELT_SRC_FILES} )
+add_library( mlt SHARED ${FRAMEWORK_SRC_FILES} )
 
-#add_library( ttvideoeditor SHARED ${TE_WRAPPER_SRC_FILES} )
+set_target_properties(mlt PROPERTIES COMPILE_FLAGS
+
+    "-DARCH_X86_64 -Wall -DPIC   -O2 -pipe -DUSE_MMX -DUSE_SSE -DUSE_SSE2 -g -D_FILE_OFFSET_BITS=64 -D_LARGEFILE_SOURCE -fPIC  -DPREFIX_DATA=\"\\\"/usr/local/share/mlt\\\"\" -DPREFIX_LIB=\"\\\"/usr/local/lib/mlt\\\"\"   -c"
+)
+
+add_library( mlt++ SHARED ${MLTCPP_SRC_FILES} )
+
+set_target_properties(mlt++ PROPERTIES COMPILE_FLAGS
+
+    "-Wall -DPIC   -O2 -pipe -DUSE_MMX -DUSE_SSE -DUSE_SSE2 -g -D_FILE_OFFSET_BITS=64 -D_LARGEFILE_SOURCE -Wall -fPIC -I..  -DVERSION=\\\"6.5.0\\\" -fvisibility=hidden   -c"
+)
+
+target_link_libraries(mlt++
+
+        mlt
+)
+
+add_library( core SHARED ${CORE_SRC_FILES} )
+
+set_target_properties(core PROPERTIES COMPILE_FLAGS
+
+    "-DARCH_X86_64 -Wall -DPIC   -O2 -pipe -DUSE_MMX -DUSE_SSE -DUSE_SSE2 -g -D_FILE_OFFSET_BITS=64 -D_LARGEFILE_SOURCE -fPIC   -c"
+)
+
+target_link_libraries(core
+
+    mlt
+)
+
+add_library( mltavformat SHARED ${AVFORMAT_SRC_FILES} )
+
+set_target_properties(mltavformat PROPERTIES COMPILE_FLAGS
+
+    "-DARCH_X86_64 -Wall -DPIC   -O2 -pipe -DUSE_MMX -DUSE_SSE -DUSE_SSE2 -g -D_FILE_OFFSET_BITS=64 -D_LARGEFILE_SOURCE -fPIC -DAVDATADIR=\\\"/usr/local/Cellar/ffmpeg/3.4.1/share/ffmpeg/\\\" -I/usr/local/Cellar/ffmpeg/3.4.1/include -I/usr/local/Cellar/ffmpeg/3.4.1/include -I/usr/local/Cellar/ffmpeg/3.4.1/include -I/usr/local/Cellar/ffmpeg/3.4.1/include -I/usr/local/Cellar/ffmpeg/3.4.1/include -I/usr/local/Cellar/ffmpeg/3.4.1/include -DFILTERS -DCODECS -DAVDEVICE -DAVFILTER   -c"
+)
+
+target_include_directories( mltavformat
+
+    PUBLIC
+
+    ${AVCODEC_INCLUDE_DIRS}
+    ${AVFORMAT_INCLUDE_DIRS}
+    ${AVUTIL_INCLUDE_DIRS}
+    ${AVRESAMPLE_INCLUDE_DIRS}
+    ${AVDEVICE_INCLUDE_DIRS}
+    ${AVFILTER_INCLUDE_DIRS}
+    ${SWSCALE_INCLUDE_DIRS}
+)
+
+target_link_libraries(mltavformat
+
+    mlt
+    ${AVCODEC_LDFLAGS}
+    ${AVFORMAT_LDFLAGS}
+    ${AVUTIL_LDFLAGS}
+    ${AVRESAMPLE_LDFLAGS}
+    ${AVDEVICE_LDFLAGS}
+    ${AVFILTER_LDFLAGS}
+    ${SWSCALE_LDFLAGS}
+)
+
+add_executable(melt ${MELT_SRC_FILES} )
 
 target_include_directories( melt
 
             PUBLIC
 
-            ${MLT_INCLUDE_DIRS}
             ${SDL2_INCLUDE_DIRS}
 )
 
 target_link_libraries( melt
 
-            ${MLT_LDFLAGS}
+            mlt
+            mlt++
+            core
+            mltavformat
             ${SDL2_LDFLAGS}
             )
 
