--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,6 +12,7 @@ INCLUDE_DIRECTORIES(
 
 find_package(PkgConfig REQUIRED)
 pkg_search_module(SDL2 REQUIRED sdl2)
+pkg_search_module(XML2 REQUIRED libxml-2.0)
 pkg_search_module(AVCODEC REQUIRED libavcodec)
 pkg_search_module(AVFORMAT REQUIRED libavformat)
 pkg_search_module(AVUTIL REQUIRED libavutil)
@@ -136,6 +137,13 @@ set(SDL_SRC_FILES
     src/modules/sdl//consumer_sdl_osx.m
 )
 
+set(XML_SRC_FILES
+    src/modules/xml/consumer_xml.c
+    src/modules/xml/common.c
+    src/modules/xml/producer_xml.c
+    src/modules/xml/factory.c
+)
+
 set(MELT_SRC_FILES
     src/melt/melt.c
     src/melt/io.c
@@ -145,14 +153,14 @@ add_library( mlt SHARED ${FRAMEWORK_SRC_FILES} )
 
 set_target_properties(mlt PROPERTIES COMPILE_FLAGS
 
-    "-DARCH_X86_64 -Wall -DPIC   -O2 -pipe -DUSE_MMX -DUSE_SSE -DUSE_SSE2 -g -D_FILE_OFFSET_BITS=64 -D_LARGEFILE_SOURCE -fPIC  -DPREFIX_DATA=\"\\\"/usr/local/share/mlt\\\"\" -DPREFIX_LIB=\"\\\"/usr/local/lib/mlt\\\"\"   -c"
+    "-DARCH_X86_64 -Wall -DPIC -DUSE_MMX -DUSE_SSE -DUSE_SSE2 -g -D_FILE_OFFSET_BITS=64 -D_LARGEFILE_SOURCE -fPIC  -DPREFIX_DATA=\"\\\"/usr/local/share/mlt\\\"\" -DPREFIX_LIB=\"\\\"/usr/local/lib/mlt\\\"\"   -c"
 )
 
 add_library( mlt++ SHARED ${MLTCPP_SRC_FILES} )
 
 set_target_properties(mlt++ PROPERTIES COMPILE_FLAGS
 
-    "-Wall -DPIC   -O2 -pipe -DUSE_MMX -DUSE_SSE -DUSE_SSE2 -g -D_FILE_OFFSET_BITS=64 -D_LARGEFILE_SOURCE -Wall -fPIC -I..  -DVERSION=\\\"6.5.0\\\" -fvisibility=hidden   -c"
+    "-Wall -DPIC -DUSE_MMX -DUSE_SSE -DUSE_SSE2 -g -D_FILE_OFFSET_BITS=64 -D_LARGEFILE_SOURCE -Wall -fPIC -I..  -DVERSION=\\\"6.5.0\\\" -fvisibility=hidden   -c"
 )
 
 target_link_libraries(mlt++
@@ -164,7 +172,7 @@ add_library( core SHARED ${CORE_SRC_FILES} )
 
 set_target_properties(core PROPERTIES COMPILE_FLAGS
 
-    "-DARCH_X86_64 -Wall -DPIC   -O2 -pipe -DUSE_MMX -DUSE_SSE -DUSE_SSE2 -g -D_FILE_OFFSET_BITS=64 -D_LARGEFILE_SOURCE -fPIC   -c"
+    "-DARCH_X86_64 -Wall -DPIC -DUSE_MMX -DUSE_SSE -DUSE_SSE2 -g -D_FILE_OFFSET_BITS=64 -D_LARGEFILE_SOURCE -fPIC   -c"
 )
 
 target_link_libraries(core
@@ -176,7 +184,7 @@ add_library( mltavformat SHARED ${AVFORMAT_SRC_FILES} )
 
 set_target_properties(mltavformat PROPERTIES COMPILE_FLAGS
 
-    "-DARCH_X86_64 -Wall -DPIC   -O2 -pipe -DUSE_MMX -DUSE_SSE -DUSE_SSE2 -g -D_FILE_OFFSET_BITS=64 -D_LARGEFILE_SOURCE -fPIC -DAVDATADIR=\\\"/usr/local/Cellar/ffmpeg/3.4.1/share/ffmpeg/\\\" -I/usr/local/Cellar/ffmpeg/3.4.1/include -I/usr/local/Cellar/ffmpeg/3.4.1/include -I/usr/local/Cellar/ffmpeg/3.4.1/include -I/usr/local/Cellar/ffmpeg/3.4.1/include -I/usr/local/Cellar/ffmpeg/3.4.1/include -I/usr/local/Cellar/ffmpeg/3.4.1/include -DFILTERS -DCODECS -DAVDEVICE -DAVFILTER   -c"
+    "-DARCH_X86_64 -Wall -DPIC -DUSE_MMX -DUSE_SSE -DUSE_SSE2 -g -D_FILE_OFFSET_BITS=64 -D_LARGEFILE_SOURCE -fPIC -DAVDATADIR=\\\"/usr/local/Cellar/ffmpeg/3.4.1/share/ffmpeg/\\\" -I/usr/local/Cellar/ffmpeg/3.4.1/include -I/usr/local/Cellar/ffmpeg/3.4.1/include -I/usr/local/Cellar/ffmpeg/3.4.1/include -I/usr/local/Cellar/ffmpeg/3.4.1/include -I/usr/local/Cellar/ffmpeg/3.4.1/include -I/usr/local/Cellar/ffmpeg/3.4.1/include -DFILTERS -DCODECS -DAVDEVICE -DAVFILTER   -c"
 )
 
 target_include_directories( mltavformat
@@ -208,7 +216,7 @@ add_library( mltsdl SHARED ${SDL_SRC_FILES} )
 
 set_target_properties(mltsdl PROPERTIES COMPILE_FLAGS
 
-    "-DARCH_X86_64 -Wall -DPIC   -O2 -pipe -DUSE_MMX -DUSE_SSE -DUSE_SSE2 -g -D_FILE_OFFSET_BITS=64 -D_LARGEFILE_SOURCE -fPIC -ObjC -D_THREAD_SAFE -I/usr/local/include/SDL2   -c"
+    "-DARCH_X86_64 -Wall -DPIC -DUSE_MMX -DUSE_SSE -DUSE_SSE2 -g -D_FILE_OFFSET_BITS=64 -D_LARGEFILE_SOURCE -fPIC -ObjC -D_THREAD_SAFE -I/usr/local/include/SDL2   -c"
 )
 
 target_include_directories( mltsdl
@@ -222,6 +230,22 @@ target_link_libraries(mltsdl
 
     mlt
     ${SDL2_LDFLAGS}
+)
+
+add_library( mltxml SHARED ${XML_SRC_FILES} )
+
+set_target_properties(mltxml PROPERTIES COMPILE_FLAGS
+ "-DARCH_X86_64 -Wall -DPIC    -DUSE_MMX -DUSE_SSE -DUSE_SSE2 -g -D_FILE_OFFSET_BITS=64 -D_LARGEFILE_SOURCE -fPIC -I/usr/local/Cellar/libxml2/2.9.7/include/libxml2   -c"
+)
+
+target_include_directories( mltxml
+    PUBLIC
+    ${XML2_INCLUDE_DIRS}
+)
+
+target_link_libraries(mltxml
+    mlt
+    ${XML2_LDFLAGS}
 )
 
 add_executable(melt ${MELT_SRC_FILES} )
@@ -240,6 +264,7 @@ target_link_libraries( melt
             core
             mltavformat
             mltsdl
+            mltxml
             ${SDL2_LDFLAGS}
             )
 
