--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,8 @@
 
 cmake_minimum_required(VERSION 3.4.1)
 
+set(CMAKE_CXX_FLAGS "-x objective-c++ -std=c++11")
+
 INCLUDE_DIRECTORIES(
     src/ZPlayer
 )
